add: first secton on index pages

--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
         </ul>
             
     </header>
-        
+        <main class="content">
+            <section class="general-info">
+                <div class="info-block">
+                    <span class="info_block_greeting">Приве, меня зовут:</span>
+                    <span class="info_block_name">Виталий Королюк:</span>
+                    <span class="info_block_professions">Я DJ</span>
+                </div>
+                <div class="HighLihten"></div>
+
+            </section>
+        </main>
+
+        <footer class="footer">
+            <span class="footer-text">
+                Сделано с <span class="footer-heart">&#10084;</span>
+            </span>
+        </footer>
 </body>
 </html>
