--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title> first page</title>
     <link rel="stylesheet" href="styles/index.css"/> 
+    
 </head>
 <body>
     <header class="header">
@@ -14,7 +15,7 @@
                 <a href="./works.html" class="link">мои работы</a>
             </li>
             <li class="links-item">
-                <a href="#" class="link">обо мне</a>
+                <a href="./about.html" class="link">обо мне</a>
                 
             </li>
         </ul>
@@ -25,9 +26,9 @@
                 <div class="info-block">
                     <span class="info_block_greeting">Приве, меня зовут:</span>
                     <span class="info_block_name">Виталий Королюк:</span>
-                    <span class="info_block_professions">Я DJ</span>
+                    <span class="info_block_professions">Я User</span>
                 </div>
-                <div class="HighLihten"></div>
+                <div class="HighLihten"></div> 
 
             </section>
         </main>
