--- a/works.html
+++ b/works.html
@@ -14,7 +14,7 @@
                 <a href="./works.html" class="link">мои работы</a>
             </li>
             <li class="links-item">
-                <a href="#" class="link">обо мне</a>
+                <a href="./about.html" class="link">обо мне</a>
                 
             </li>
         </ul>
