add works pages

--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@
 
 <body>
     <header class="header">
-        <img class="avatar" src="images/avatar.jpg" />
+        <a href="./index.html">
+            <img class="avatar" src="images/avatar.jpg" />
+        </a>
 
         <ul class="links">
             <li class="links-item">
@@ -30,7 +32,7 @@
         <div class="info-wraper">
             <h1 class="info-title"> обо мне</h1>
 
-            <p class="info-description">мне 28ле.т</p>
+            <p class="info-description">мне 28лет</p>
             <table class="info">
 
                 <tr class="info-row">
