--- a/works.html
+++ b/works.html
@@ -1,26 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="styles/index.css"/>
+    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/works.css" />
     <meta charset="UTF-8">
     <title>мои работы</title>
 </head>
+
 <body>
     <header class="header">
-        <img class="avatar" src="images/avatar.jpg"/>
-
+        <a href="./index.html">
+            <img class="avatar" src="images/avatar.jpg" />
+        </a>
         <ul class="links">
             <li class="links-item">
                 <a href="./works.html" class="link">мои работы</a>
             </li>
             <li class="links-item">
                 <a href="./about.html" class="link">обо мне</a>
-                
+
             </li>
         </ul>
     </header>
-        <main>
-            <h1>здесь будут мои работы</h1>
-        </main>
+    <main class="content">
+
+        <h1 class="works-title">мои работы</h1>
+        <ul class="works">
+            <li class="worx-item">
+                <img src="./images/avatar.jpg" alt="works-1" class="works-image">
+                <span class="work-title">покрасил машину</span>
+
+                <p class="works-deskription">помыл машину, заехал в магазин закупился</p>
+            </li>
+            <li class="worx-item">
+                <img src="./images/avatar.jpg" alt="works-1" class="works-image">
+                <span class="work-title">покрасил машину</span>
+
+                <p class="works-deskription">помыл машину, заехал в магазин закупился</p>
+            </li>
+            <li class="worx-item">
+                <img src="./images/avatar.jpg" alt="works-1" class="works-image">
+                <span class="work-title">покрасил машину</span>
+
+                <p class="works-deskription">помыл машину, заехал в магазин закупился</p>
+            </li>
+            <li class="worx-item">
+                <img src="./images/avatar.jpg" alt="works-1" class="works-image">
+                <span class="work-title">покрасил машину</span>
+
+                <p class="works-deskription">помыл машину, заехал в магазин закупился</p>
+            </li>
+        </ul>
+    </main>
+    <footer class="footer">
+        <span class="footer-text">
+            Сделано с <span class="footer-heart">&#10084;</span>
+        </span>
+    </footer>
 </body>
+
 </html>
