--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main class="content">
         <section class="general-info">
             <div class="info-block">
-                <span class="info_block_greeting">Приве, меня зовут:</span>
+                <span class="info_block_greeting">Привет, меня зовут:</span>
                 <span class="info_block_name">Виталий Королюк:</span>
                 <span class="info_block_professions">Я User</span>
             </div>
