--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                     <td class="info-cell">+375 29 206-10-44</td>
                 </tr>
             </table>
-            <a href="./works.html" class="info-works">Посмотреть раблты</a>
+            <a href="./works.html" class="info-works">Посмотреть работы</a>
         </div>
 
 
